# Mypython

./: README.md  knowledge.txt  main.py  pyproject.toml
API/: api_key.py  dasssapi.py  openai_client.py
Embedding/: Embedding-demo,py  Embeddingku-demo.py
Embedding/Practice/: Embedding-Practice-demo1.py  Embeddingku-Practice-demo1.py
RAG/: Rag-demo1.py
